--- a/css/rfv.css
+++ b/css/rfv.css
@@ -305,24 +305,9 @@ ul
 }
 
 .button {
-  background-attachment: scroll;
-  background-clip: border-box;
-  background-color: transparent;
-  background-image: none;
-  background-origin: padding-box;
-  background-position: 0% 0%;
-  background-position-x: 0%;
-  background-position-y: 0%;
-  background-repeat: repeat;
-  background-size: auto auto;
   border-bottom-color: rgb(255, 255, 255);
   border-bottom-style: solid;
   border-bottom-width: 2px;
-  border-image-outset: 0 0 0 0;
-  border-image-repeat: stretch stretch;
-  border-image-slice: 100% 100% 100% 100%;
-  border-image-source: none;
-  border-image-width: 1 1 1 1;
   border-left-color: rgb(255, 255, 255);
   border-left-style: solid;
   border-left-width: 2px;
@@ -332,19 +317,6 @@ ul
   border-top-color: rgb(255, 255, 255);
   border-top-style: solid;
   border-top-width: 2px;
-  color: rgb(255, 255, 255);
-  list-style-image: none;
-  list-style-position: outside;
-  list-style-type: none;
-  padding-bottom: 11px;
-  padding-left: 20.1667px;
-  padding-right: 17.3667px;
-  padding-top: 11px;
-  text-decoration-color: rgb(255, 255, 255);
-  text-decoration-style: solid;
-  -moz-border-bottom-colors: none;
-  -moz-border-left-colors: none;
-  -moz-border-right-colors: none;
-  -moz-border-top-colors: none;
-
+  padding: 11px;
+  display:inline-block
 }
