--- a/css/rfv.css
+++ b/css/rfv.css
@@ -323,3 +323,14 @@ ul
   margin: 5px 5px 5px 0px;
   display: inline-block;
 }
+
+tr.sign {
+  background: #666666;
+  background: -moz-linear-gradient(90deg, #000000 0%, #444444 19%, #cccccc 100%);
+  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#000000), color-stop(19%,#444444), color-stop(100%,#cccccc));
+  background: -webkit-linear-gradient(90deg, #000000 0%, #444444 19%, #cccccc 100%);
+  background: -o-linear-gradient(90deg, #000000 0%, #444444 19%, #cccccc 100%);
+  background: -ms-linear-gradient(90deg, #000000 0%, #444444 19%, #cccccc 100%);
+  background: linear-gradient(90deg, #000000 0%, #444444 19%, #cccccc 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#cccccc',GradientType=1 );
+}
