--- a/css/rfv.css
+++ b/css/rfv.css
@@ -307,21 +307,17 @@ ul
 }
 
 .button {
-  border-bottom-color: rgb(255, 255, 255);
-  border-bottom-style: solid;
-  border-bottom-width: 2px;
-  border-left-color: rgb(255, 255, 255);
-  border-left-style: solid;
-  border-left-width: 2px;
-  border-right-color: rgb(255, 255, 255);
-  border-right-style: solid;
-  border-right-width: 2px;
-  border-top-color: rgb(255, 255, 255);
-  border-top-style: solid;
-  border-top-width: 2px;
+  border-color: rgb(255, 255, 255);
+  border-style: solid;
+  border-width: 2px;
+
   padding: 11px;
   margin: 5px 5px 5px 0px;
   display: inline-block;
+}
+
+.button-black {
+  border-color: rgb(0, 0, 0);
 }
 
 tr.sign {
