--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -171,7 +171,7 @@ a:focus {
   width: 100%;
   padding: 50px 0;
   color: white;
-  background: url(../img/backgrounds/trade-bg.jpg) no-repeat center center scroll;
+  background: no-repeat center center scroll;
   background-color: rgb(37, 37, 37);;
   -webkit-background-size: cover;
   -moz-background-size: cover;
