--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -20,7 +20,7 @@ html {
 h1
 {
   font-size: 47px;
-  font-family: 'blocksblocks';
+  /*font-family: 'blocksblocks';*/
   color: rgb(199, 199, 199);
 }
 p {
@@ -152,7 +152,7 @@ a:focus {
 .details-section {
   width: 100%;
   color: black;
-  background-color: rgb(255, 255, 0);
+  background-color: rgb(255, 255, 255);
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -161,7 +161,7 @@ a:focus {
 .education-section {
   width: 100%;
   color: black;
-  background-color: rgb(255, 255, 0);
+  background-color: rgb(239, 239, 239);
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -170,7 +170,7 @@ a:focus {
 .programming-section {
   width: 100%;
   color: black;
-  background-color: rgb(255, 255, 0);
+  background-color: rgb(255, 255, 255);
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
