--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -19,19 +19,25 @@ html {
 
 h1
 {
-  font-size: 47px;
+  font-size: 4em;
   /*font-family: 'blocksblocks';*/
   color: rgb(199, 199, 199);
 }
+h2
+{
+  font-size: 3em;
+  /*font-family: 'blocksblocks';*/
+  color: rgb(127, 127, 127);
+}
 p {
   margin: 0 0 25px;
-  font-size: 18px;
+  font-size: 1em;
   line-height: 1.5;
 }
 @media (min-width: 768px) {
   p {
     margin: 0 0 35px;
-    font-size: 20px;
+    font-size: 1.5em;
     line-height: 1.6;
   }
 }
@@ -59,14 +65,14 @@ a:focus {
 .navbar-custom .navbar-toggle {
   color: black;
   background-color: rgba(255, 255, 255, 0);
-  font-size: 12px;
+  font-size: 0.5em;
 }
 .navbar-custom .navbar-toggle:focus,
 .navbar-custom .navbar-toggle:active {
   outline: none;
 }
 .navbar-custom .navbar-brand {
-  font-size: 23px;
+  font-size: 1em;
 }
 .navbar-custom .navbar-brand:focus {
   outline: none;
@@ -80,7 +86,7 @@ a:focus {
   transition: background 0.3s ease-in-out;
 }
 .navbar-custom .nav li a:hover {
-  color: rgb(64, 64, 64);
+  color: rgb(0, 0, 0);
   outline: none;
   background-color: transparent;
 }
@@ -93,17 +99,17 @@ a:focus {
   outline: none;
 }
 .navbar-custom .nav li.active a {
-  background-color: rgba(64, 64, 64, 0.5);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 .navbar-custom .nav li.active a:hover {
-  color: rgb(64, 64, 64);
+  color: rgb(0, 0, 0);
 }
 @media (min-width: 768px) {
   .navbar-custom {
     padding: 20px 0;
     border-bottom: none;
     letter-spacing: 1px;
-    background: rgb(64, 64, 64);
+    background: rgb(0, 0, 0);
     
   }
   .navbar-custom.top-nav-collapse {
@@ -118,7 +124,6 @@ a:focus {
   height: auto;
   text-align: left;
   color: black;
-  background-color: rgb(255, 255, 255);
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -129,11 +134,11 @@ a:focus {
   vertical-align: middle;
 }
 .intro .intro-body .brand-heading {
-  font-size: 37px;
+  font-size: 1em;
   color: black;
 }
 .intro .intro-body .intro-text {
-  font-size: 29px;
+  font-size: 1em;
   color: black;
 }
 @media (min-width: 768px) {
@@ -142,10 +147,10 @@ a:focus {
     padding: 0;
   }
   .intro .intro-body .brand-heading {
-    font-size: 100px;
+    font-size: 3em;
   }
   .intro .intro-body .intro-text {
-    font-size: 29px;
+    font-size: 2em;
   }
 }
 .content-section {}
@@ -188,6 +193,7 @@ a:focus {
 }
 .btn-default {
   border: 1px solid #42DCA3;
+  border-radius: 25px;
   color: #42DCA3;
   background-color: transparent;
 }
