--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -3,7 +3,7 @@ body {
   height: 100%;
   font-family: 'Roboto', "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: white;
-  background-color: white;
+  background-color: black;
 }
 @font-face {
     font-family: 'blocksblocks';
@@ -63,7 +63,7 @@ a:focus {
   background-color: black;
 }
 .navbar-custom .navbar-toggle {
-  color: black;
+  color: white;
   background-color: rgba(255, 255, 255, 0);
   font-size: 0.5em;
 }
@@ -78,7 +78,7 @@ a:focus {
   outline: none;
 }
 .navbar-custom a {
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 .navbar-custom .nav li a {
   -webkit-transition: background 0.3s ease-in-out;
@@ -86,7 +86,7 @@ a:focus {
   transition: background 0.3s ease-in-out;
 }
 .navbar-custom .nav li a:hover {
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   outline: none;
   background-color: transparent;
 }
@@ -102,14 +102,14 @@ a:focus {
   background-color: rgba(0, 0, 0, 0.5);
 }
 .navbar-custom .nav li.active a:hover {
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 @media (min-width: 768px) {
   .navbar-custom {
     padding: 20px 0;
     border-bottom: none;
     letter-spacing: 1px;
-    background: rgb(0, 0, 0);
+    background: rgb(255, 255, 255);
     
   }
   .navbar-custom.top-nav-collapse {
@@ -123,7 +123,7 @@ a:focus {
   width: 100%;
   height: 100%;
   text-align: left;
-  color: black;
+  color: white;
 
 }
 .intro .intro-body {
@@ -132,11 +132,11 @@ a:focus {
 }
 .intro .intro-body .brand-heading {
   font-size: 1em;
-  color: black;
+  color: white;
 }
 .intro .intro-body .intro-text {
   font-size: 2em;
-  color: black;
+  color: white;
 }
 .intro .intro-body .intro-links {
   font-size: 1.5em;
@@ -159,7 +159,7 @@ a:focus {
 .content-section {}
 .details-section {
   width: 100%;
-  color: black;
+  color: white;
   background-color: rgb(239, 239, 239);
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -168,7 +168,7 @@ a:focus {
 }
 .education-section {
   width: 100%;
-  color: black;
+  color: white;
   background-color: rgb(255, 255, 255);
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -177,7 +177,7 @@ a:focus {
 }
 .programming-section {
   width: 100%;
-  color: black;
+  color: white;
   background-color: rgb(239, 239, 239);
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -204,7 +204,7 @@ a:focus {
 .btn-default:focus {
   border: 1px solid #42DCA3;
   outline: none;
-  color: black;
+  color: white;
   background-color: #42DCA3;
 }
 ul.banner-social-buttons {
